# PurduePrep

./: .eslintrc.json  .gitattributes  .gitignore  .slugignore  CONTRIBUTING.md  Dockerfile  ProcFile  README.md  dockerfile  download_model.sh  download_models.py  heroku.yml  lic.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sbom.json
.github/: pull_request_template.md
.github/workflows/: build_config.yml  python-app.yml
PurduePrep/: .gitignore  Dockerfile  app.py  docker-compose.yml  input_text.txt  main.py  questionid.pkl
PurduePrep-back/: Dockerfile
PurduePrep-back/backend/: app.py  main.py
PurduePrep-back/backend/scrape/: find_questions.py  question_ID_model.ipynb  relevance.py  split_page.py
PurduePrep-back/tests/: test_crawl_scrape.py  test_main.py  test_relevance.py
PurduePrep-front/: Dockerfile
PurduePrep-front/frontend/: next.config.mjs
PurduePrep/backend/: .dockerignore  Dockerfile  app.py  main.py  requirements.txt
PurduePrep/backend/webcrawl/: crawler.py  (+2 more)
PurduePrep/frontend/: .eslintrc.json  Dockerfile  next.config.mjs
PurduePrep/scrape/: bert_functions.py  find_questions.py  questionID.py  question_ID_model.ipynb  question_id_bert.py  relevance.py  split_page.py  vectordb_test.py
PurduePrep/webcrawl/: crawler.py  ece404_e1_sp2021.txt  extract_body_text.py  gather_websites.py  gather_websites_list.py  page.py  query_build.py  webcrawl_functions.py
src/pages/: index.tsx
src/styles/: globals.css
tests/: test_crawl_scrape.py  test_main.py  test_relevance.py
tests/webcrawl_tests/: test_webcrawl_functions.py
(+12 files in other folders)
