[tool.poetry]
name = "purdueprep"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faiss-cpu = "^1.8.0.post1"
sentence-transformers = "^3.0.1"
pytest = "^8.3.3"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
html5lib = "^1.1"
requests = "^2.32.3"
pypdf = "^4.3.1"
pathlib = "^1.0.1"
black = "^24.8.0"
flake8 = "^7.1.1"
flask = "^3.0.3"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
